--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <div>
     <%= link_to "Log Out", logout_path, method: :delete%>
+    <%= link_to "Add a beer", new_beer_path %>
   </div>
 
   <body>
