--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,6 +4,8 @@
     <h2><%= beer.name %> - <%= beer.brewery.name %></h2>
 
     <div>
+        <p><%= beer.style %></p>
+        <p><%= beer.alc %></p>
         <p><%= beer.description %></p>
     </div>
 <% end %>
