--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -23,7 +23,7 @@
 
         <p>Select a brewery that already exists:</p>
     <div>
-        <%= f.collection_select :brewery_id, Brewery.all, :id, :name %>
+        <%= f.collection_select :brewery_id, Brewery.all, :id, :name, include_blank: 'Select One' %>
     </div>
 
         <p>Or add a new Brewery:</p>
